homePage - Section 1 - Hebrew and logo + about

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				<div class="col-lg-2">
 					<div class="logo">
 						<a class="logo_img" href="index.html" title="lawyer">
-							<img src="assets/images/logo.png" alt="" />
+							<img src="assets/images/LawyerMaayanLogo.svg" alt="" />
 						</a>
 						<a class="main_sticky" href="index.html" title="lawyer">
 							<img src="assets/images/logo.png" alt="astute" />
@@ -112,15 +112,15 @@
 				<div class="col-lg-8">
 					<nav class="lawyer_menu">
 						<ul class="nav_scroll">
-							<li><a href="#">Home</a>
+							<li><a href="#">עמוד הבית</a>
 								<ul class="sub-menu">
 									<li><a href="index.html">Home Page 01</a></li>
 									<li><a href="index-2.html">Home Page 02</a></li>
 									<li><a href="index-3.html">Home Page 03</a></li>
 								</ul>
 							</li>
-							<li><a href="about.html">About </a></li>
-							<li><a href="#">Pages</a>
+							<li><a href="about.html">אודות</a></li>
+							<li><a href="#">תחומי התמחות</a>
 								<ul class="sub-menu">
 									<li><a href="about.html">About</a></li>
 									<li><a href="service.html">Service</a></li>
@@ -129,30 +129,30 @@
 									<li><a href="contact.html">Contact</a></li>
 								</ul>
 							</li>
-							<li><a href="#">Case Study</a>
+							<!-- <li><a href="#">Case Study</a>
 								<ul class="sub-menu">
 									<li><a href="case-study-1.html">Case Study One</a></li>
 									<li><a href="case-study-2.html">Case Study Two</a></li>
 									<li><a href="case-study-3.html">Case Study Three</a></li>
 									<li><a href="case-study-details.html">Case Study Details</a></li>
 								</ul>
-							</li>
-							<li><a href="#">Blog</a>
+							</li> -->
+							<li><a href="#">בלוג</a>
 								<ul class="sub-menu">
 									<li><a href="blog.html">Blog List</a></li>
 									<li><a href="blog-2column.html">Blog 2Column</a></li>
 									<li><a href="blog-details.html">Blog Details</a></li>
 								</ul>
 							</li>
-							<li><a href="contact.html">Contact</a></li>
+							<li><a href="contact.html">צור קשר</a></li>
 						</ul>
 					</nav>
 				</div>
-				<div class="col-lg-2 pl-0 pr-0 ">
+				<!-- <div class="col-lg-2 pl-0 pr-0 ">
 					<div class="header-button">
 						<a href="contact.html"> Gete Started <i class="bi bi-arrow-right"></i> </a>
 					</div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</div>
@@ -219,13 +219,13 @@
 					<div class="hero-content text-center">
 						<!-- hero title -->
 						<div class="hero-title">
-							<h1> Every New Time Will </h1>
-							<h1> Give its Law </h1>
+							<h1>עורכת דין מעיין דקל</h1>
+							<!-- <h1> Give its Law </h1> -->
 						</div>
 						<!-- hero button -->
-						<div class="hero-button">
+						<!-- <div class="hero-button">
 							<a href="about.html"> Explore More <i class="bi bi-arrow-right"></i></a>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
@@ -248,23 +248,26 @@
 				<div class="col-lg-6 col-md-12 pr-0 pl-0">
 					<div class="about-extra-single-box">
 						<div class="lawyer-section-title">
-							<h4> Welcome to Lawyern </h4>
-							<h1> Helping Good People </h1>
-							<h1 class="section-text"> Do Good Things </h1>
+							<!-- <h4> Welcome to Lawyern </h4> -->
+							<h1> אודות משרדנו</h1>
+							<!-- <h1 class="section-text"> Do Good Things </h1> -->
 							<p> Contrary to popular belief Lorem Ipsum is not simply random text date has roots in a
 								piece of classical Latin literature from making it solution over 2000 years old lawyer
 								super hero.e </p>
 						</div>
 						<!-- lawyer button -->
 						<div class="lawyer-button">
-							<a href="about.html"> Discover More <i class="bi bi-arrow-right"></i> </a>
+							<a href="about.html">
+								<span>קראו עוד</span>
+								<i class="bi bi-arrow-left"></i>
+							</a>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-6 col-md-12 pl-0 pr-0">
 					<!-- about thumb -->
 					<div class="about-thumb">
-						<img src="assets/images/resource/about.png" alt="">
+						<img src="assets/images/resource/about.jpeg" alt="">
 					</div>
 				</div>
 			</div>
