--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 						<a class="logo_img" href="index.html" title="lawyer">
 							<img src="assets/images/LawyerMaayanLogo.svg" alt="" />
 						</a>
-						<a class="main_sticky" href="index.html" title="lawyer">
-							<img src="assets/images/logo.png" alt="astute" />
+						<a class="logo_img main_sticky" href="index.html" title="lawyer">
+							<img src="assets/images/LawyerMaayanLogo.svg" alt="astute" />
 						</a>
 					</div>
 				</div>
@@ -289,9 +289,11 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="lawyer-section-title pb-60 text-center">
-						<h1> Practice Aria </h1>
-						<p>Our consequat tincidunt turpis sit amet imperdiet praesent Class nonatoureanor practice aria
-							mauris laoreet, iaculis libero quis et tempus eri consequat lawyer.</p>
+						<h1> תחומי התמחות </h1>
+						<p>
+
+
+						</p>
 					</div>
 				</div>
 			</div>
@@ -306,7 +308,7 @@
 						<div class="lawyer-service-content">
 							<!-- service title -->
 							<div class="service-title">
-								<h3>Business Focused</h3>
+								<h3>נדל"ן</h3>
 							</div>
 							<!-- service description -->
 							<div class="service-desc">
@@ -315,7 +317,7 @@
 							</div>
 							<!-- service button -->
 							<div class="service-button">
-								<a href="service.html">Read More <i class="bi bi-arrow-right"></i></a>
+								<a href="service.html">Read More <i class="bi bi-arrow-left"></i></a>
 							</div>
 						</div>
 					</div>
@@ -330,7 +332,7 @@
 						<div class="lawyer-service-content">
 							<!-- service title -->
 							<div class="service-title">
-								<h3>Real Estate Law</h3>
+								<h3>חוזים</h3>
 							</div>
 							<!-- service description -->
 							<div class="service-desc">
@@ -339,7 +341,7 @@
 							</div>
 							<!-- service button -->
 							<div class="service-button">
-								<a href="service.html">Read More <i class="bi bi-arrow-right"></i></a>
+								<a href="service.html">Read More <i class="bi bi-arrow-left"></i></a>
 							</div>
 						</div>
 					</div>
@@ -354,7 +356,7 @@
 						<div class="lawyer-service-content">
 							<!-- service title -->
 							<div class="service-title">
-								<h3>Judicial Results</h3>
+								<h3>בלוג והרצאות</h3>
 							</div>
 							<!-- service description -->
 							<div class="service-desc">
@@ -363,7 +365,7 @@
 							</div>
 							<!-- service button -->
 							<div class="service-button">
-								<a href="service.html">Read More <i class="bi bi-arrow-right"></i></a>
+								<a href="service.html">Read More <i class="bi bi-arrow-left"></i></a>
 							</div>
 						</div>
 					</div>
@@ -378,7 +380,7 @@
 						<div class="lawyer-service-content">
 							<!-- service title -->
 							<div class="service-title">
-								<h3>Health Care Law</h3>
+								<h3>לשון הרע</h3>
 							</div>
 							<!-- service description -->
 							<div class="service-desc">
@@ -387,7 +389,7 @@
 							</div>
 							<!-- service button -->
 							<div class="service-button">
-								<a href="service.html">Read More <i class="bi bi-arrow-right"></i></a>
+								<a href="service.html">Read More <i class="bi bi-arrow-left"></i></a>
 							</div>
 						</div>
 					</div>
@@ -402,7 +404,7 @@
 						<div class="lawyer-service-content">
 							<!-- service title -->
 							<div class="service-title">
-								<h3>Ecommerce Law</h3>
+								<h3>נזיקין</h3>
 							</div>
 							<!-- service description -->
 							<div class="service-desc">
@@ -411,7 +413,7 @@
 							</div>
 							<!-- service button -->
 							<div class="service-button">
-								<a href="service.html">Read More <i class="bi bi-arrow-right"></i></a>
+								<a href="service.html">Read More <i class="bi bi-arrow-left"></i></a>
 							</div>
 						</div>
 					</div>
@@ -426,7 +428,7 @@
 						<div class="lawyer-service-content">
 							<!-- service title -->
 							<div class="service-title">
-								<h3>Insurance Law</h3>
+								<h3>הוצאה לפועל</h3>
 							</div>
 							<!-- service description -->
 							<div class="service-desc">
@@ -435,7 +437,7 @@
 							</div>
 							<!-- service button -->
 							<div class="service-button">
-								<a href="service.html">Read More <i class="bi bi-arrow-right"></i></a>
+								<a href="service.html">Read More <i class="bi bi-arrow-left"></i></a>
 							</div>
 						</div>
 					</div>
@@ -454,7 +456,7 @@
 	<!--==================================================-->
 	<!-- Start lawyer faq section -->
 	<!--==================================================-->
-	<div class="faq-section">
+	<!-- <div class="faq-section">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-md-12">
@@ -499,7 +501,8 @@
 						<p>Our consequat tincidunt turpis sit amet imperdiet praesent nonatoureanor practice aria mauris
 							laoreet libero tempus eri consequat lawyer.</p>
 					</div>
-					<!-- faq accordion -->
+					
+					<!-- faq accordion
 					<div id="tab1" class="tab_content">
 						<ul class="accordion">
 							<li>
@@ -522,7 +525,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<!--==================================================-->
 	<!-- End lawyer faq section -->
@@ -540,9 +543,9 @@
 			<div class="row">
 				<div class="col-lg-12 pb-60">
 					<div class="lawyer-section-title text-center">
-						<h1> Free Consultation </h1>
-						<p>Our consequat tincidunt turpis sit amet imperdiet praesent Class nonatoureanor practice aria
-							mauris laoreet, iaculis libero quis et tempus eri consequat lawyer.</p>
+						<h1> השאירו פרטים ונחזור אליכם בהקדם</h1>
+						<!-- <p>Our consequat tincidunt turpis sit amet imperdiet praesent Class nonatoureanor practice aria
+							mauris laoreet, iaculis libero quis et tempus eri consequat lawyer.</p> -->
 					</div>
 				</div>
 			</div>
@@ -554,33 +557,33 @@
 							<div class="row">
 								<div class="col-lg-6 col-md-6">
 									<div class="form-box">
-										<input type="text" placeholder="Your Name">
+										<input type="text" placeholder="שם מלא">
 									</div>
 								</div>
 								<div class="col-lg-6 col-md-6">
 									<div class="form-box">
-										<input type="text" placeholder="E-Mail Address">
+										<input type="text" placeholder="אימייל">
 									</div>
 								</div>
 								<div class="col-lg-6 col-md-6">
 									<div class="form-box">
-										<input type="text" placeholder="Subject">
+										<input type="text" placeholder="נושא">
 									</div>
 								</div>
 								<div class="col-lg-6 col-md-6">
 									<div class="form-box">
-										<input type="text" placeholder="Phone">
+										<input type="text" placeholder="טלפון">
 									</div>
 								</div>
 								<div class="col-lg-12">
 									<div class="form-box">
 										<textarea name="massage" id="massage" cols="30" rows="10"
-											placeholder="Write Comment"></textarea>
+											placeholder="השאר הודעה"></textarea>
 									</div>
 								</div>
 								<div class="col-lg-12">
 									<div class="contact-form">
-										<button type="submit"> Submit Now </button>
+										<button type="submit"> שלח </button>
 									</div>
 								</div>
 							</div>
@@ -621,7 +624,7 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="lawyer-section-title pb-60 text-center">
-						<h1> Creative Services </h1>
+						<h1> בלוג הרצאות ותקשורת </h1>
 						<p>Our consequat tincidunt turpis sit amet imperdiet praesent Class nonatoureanor practice aria
 							mauris laoreet, iaculis libero quis et tempus eri consequat lawyer.</p>
 					</div>
@@ -638,16 +641,15 @@
 						<div class="lawyer-service-content">
 							<!-- service title -->
 							<div class="service-title">
-								<h3>Real Estate Law</h3>
+								<h3>הרצאה הוצאה לפועל</h3>
 							</div>
 							<!-- service description -->
 							<div class="service-desc">
-								<p>Child Welfare Vestibulum eget mauris world dui proin luctus est lacus, eu lobortis
-									design dignissim.</p>
+								<p>הרצאה על הוצאה לפועל, נדל"ן ודרכי פעולה.</p>
 							</div>
 							<!-- service button -->
 							<div class="service-button">
-								<a href="service.html">Read More <i class="bi bi-arrow-right"></i></a>
+								<a href="service.html">קרא\י עוד <i class="bi bi-arrow-left"></i></a>
 							</div>
 						</div>
 					</div>
@@ -662,16 +664,15 @@
 						<div class="lawyer-service-content">
 							<!-- service title -->
 							<div class="service-title">
-								<h3>Real Estate Law</h3>
+								<h3>הרצאה בעניין נדל"ן</h3>
 							</div>
 							<!-- service description -->
 							<div class="service-desc">
-								<p>Child Welfare Vestibulum eget mauris world dui proin luctus est lacus, eu lobortis
-									design dignissim.</p>
+								<p>הרצאה על הוצאה לפועל, נדל"ן ודרכי פעולה.</p>
 							</div>
 							<!-- service button -->
 							<div class="service-button">
-								<a href="service.html">Read More <i class="bi bi-arrow-right"></i></a>
+								<a href="service.html">קרא\י עוד<i class="bi bi-arrow-left"></i></a>
 							</div>
 						</div>
 					</div>
@@ -686,16 +687,15 @@
 						<div class="lawyer-service-content">
 							<!-- service title -->
 							<div class="service-title">
-								<h3>Real Estate Law</h3>
+								<h3>הרצאה בגין ניזקי קטינים ונשים</h3>
 							</div>
 							<!-- service description -->
 							<div class="service-desc">
-								<p>Child Welfare Vestibulum eget mauris world dui proin luctus est lacus, eu lobortis
-									design dignissim.</p>
+								<p>הרצאה על הוצאה לפועל, נדל"ן ודרכי פעולה.</p>
 							</div>
 							<!-- service button -->
 							<div class="service-button">
-								<a href="service.html">Read More <i class="bi bi-arrow-right"></i></a>
+								<a href="service.html">קרא\י עוד <i class="bi bi-arrow-left"></i></a>
 							</div>
 						</div>
 					</div>
