--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 					<div class="hero-content text-center">
 						<!-- hero title -->
 						<div class="hero-title">
-							<h1>עורכת דין מעיין דקל</h1>
+							<h1>עורכת דין מעין דקל</h1>
 							<!-- <h1> Give its Law </h1> -->
 						</div>
 						<!-- hero button -->
@@ -251,9 +251,13 @@
 							<!-- <h4> Welcome to Lawyern </h4> -->
 							<h1> אודות משרדנו</h1>
 							<!-- <h1 class="section-text"> Do Good Things </h1> -->
-							<p> Contrary to popular belief Lorem Ipsum is not simply random text date has roots in a
-								piece of classical Latin literature from making it solution over 2000 years old lawyer
-								super hero.e </p>
+							<p> מעין דקל עורכת דין מנוסה בעלת ניסיון עשיר של 20 שנים, בעבודה עם משרדי עורכי דין המובלים
+								בישראל, שכלל מתן שירות לעיריות ,
+								חברות ביטוח, בנקים, מכללות ורשות מקרקעי ישראל. הכרות מעמיקה עם לשכות הוצל"פ אשר מאפשרות
+								לה להעניק ידע מקצועי נרחב
+								ואפשרות רחבה של טיפול בגביית חובות. עורכת הדין משלמת יצירתיות משפטית ורגישות אנושית גבוה
+								.
+							</p>
 						</div>
 						<!-- lawyer button -->
 						<div class="lawyer-button">
@@ -625,8 +629,8 @@
 				<div class="col-lg-12">
 					<div class="lawyer-section-title pb-60 text-center">
 						<h1> בלוג הרצאות ותקשורת </h1>
-						<p>Our consequat tincidunt turpis sit amet imperdiet praesent Class nonatoureanor practice aria
-							mauris laoreet, iaculis libero quis et tempus eri consequat lawyer.</p>
+						<p>הרצאות והדרכות שבהם מועברים חוקים ופסיקות עדכניות כולל הסבר מלא בצורה הומוריסטית ומשעשעת לכל
+							אדם.</p>
 					</div>
 				</div>
 			</div>
@@ -706,426 +710,6 @@
 	<!--==================================================-->
 	<!-- End lawyer service Secton -->
 	<!--==================================================-->
-
-
-
-
-
-	<!--==================================================-->
-	<!-- Start lawyer Blog Section -->
-	<!--==================================================-->
-	<div class="team-section">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-					<div class="lawyer-section-title white text-center pb-65">
-						<h1> Creative Team Member </h1>
-						<p>Our consequat tincidunt turpis sit amet imperdiet praesent Class nonatoureanor practice aria
-							mauris laoreet, iaculis libero quis et tempus eri consequat lawyer.</p>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-4 col-md-6">
-					<div class="team-single-box">
-						<!-- volunteer thumb -->
-						<div class="team-thumb">
-							<img src="assets/images/resource/team1.jpg" alt="">
-							<!-- team social icon -->
-							<div class="team-share-social">
-								<div class="team-socail-icon">
-									<a href="#"><span><i class="fab fa-facebook-f"></i></span></a>
-									<a href="#"><i class="fab fa-twitter"></i></a>
-									<a href="#"><i class="fab fa-linkedin-in"></i></a>
-									<a href="#"><i class="fab fa-pinterest-p"></i></a>
-								</div>
-								<div class="team-icon text-right">
-									<span>+</span>
-								</div>
-							</div>
-						</div>
-						<!-- team content -->
-						<div class="team-content">
-							<!-- volunteer title -->
-							<div class="team-title">
-								<h2>Anjelles Watson</h2>
-							</div>
-							<!-- team text -->
-							<div class="team-text">
-								<span>Web Developer</span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6">
-					<div class="team-single-box">
-						<!-- volunteer thumb -->
-						<div class="team-thumb">
-							<img src="assets/images/resource/team2.jpg" alt="">
-							<!-- team social icon -->
-							<div class="team-share-social">
-								<div class="team-socail-icon">
-									<a href="#"><span><i class="fab fa-facebook-f"></i></span></a>
-									<a href="#"><i class="fab fa-twitter"></i></a>
-									<a href="#"><i class="fab fa-linkedin-in"></i></a>
-									<a href="#"><i class="fab fa-pinterest-p"></i></a>
-								</div>
-								<div class="team-icon text-right">
-									<span>+</span>
-								</div>
-							</div>
-						</div>
-						<!-- team content -->
-						<div class="team-content">
-							<!-- volunteer title -->
-							<div class="team-title">
-								<h2>Louise Campbell</h2>
-							</div>
-							<!-- team text -->
-							<div class="team-text">
-								<span>Graphic Designer</span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6">
-					<div class="team-single-box">
-						<!-- volunteer thumb -->
-						<div class="team-thumb">
-							<img src="assets/images/resource/team3.jpg" alt="">
-							<!-- team social icon -->
-							<div class="team-share-social">
-								<div class="team-socail-icon">
-									<a href="#"><span><i class="fab fa-facebook-f"></i></span></a>
-									<a href="#"><i class="fab fa-twitter"></i></a>
-									<a href="#"><i class="fab fa-linkedin-in"></i></a>
-									<a href="#"><i class="fab fa-pinterest-p"></i></a>
-								</div>
-								<div class="team-icon text-right">
-									<span>+</span>
-								</div>
-							</div>
-						</div>
-						<!-- team content -->
-						<div class="team-content">
-							<!-- volunteer title -->
-							<div class="team-title">
-								<h2>David E. Meza</h2>
-							</div>
-							<!-- team text -->
-							<div class="team-text">
-								<span>Project Manager</span>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!--==================================================-->
-	<!-- End lawyer galary Section -->
-	<!--==================================================-->
-
-
-
-
-
-	<!--==================================================-->
-	<!-- Start lawyer galary Section -->
-	<!--==================================================-->
-	<div class="case-study-section">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="col-lg-12">
-					<div class="lawyer-section-title text-center pb-65">
-						<h1> Case Studies </h1>
-						<p>Our consequat tincidunt turpis sit amet imperdiet praesent Class nonatoureanor practice aria
-							mauris laoreet, iaculis libero quis et tempus eri consequat lawyer.</p>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="case-list owl-carousel">
-					<div class="col-lg-12">
-						<div class="case-study-single-box">
-							<!-- study thumb -->
-							<div class="case-study-thumb">
-								<img src="assets/images/resource/case1.jpg" alt="">
-								<!-- port content icon -->
-								<div class="case-study-icon">
-									<a class="case-study-icon venobox vbox-item" data-gall="myportfolio"
-										href="assets/images/resource/case1.jpg"><i
-											class="bi bi-arrows-fullscreen"></i></a>
-								</div>
-							</div>
-							<!-- study content -->
-							<div class="case-study-content">
-								<div class="study-text">
-									<p> Personal </p>
-								</div>
-								<div class="study-title">
-									<h4><a href="case-study-details.html">Persona drug affences</a></h4>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-12">
-						<div class="case-study-single-box">
-							<!-- study thumb -->
-							<div class="case-study-thumb">
-								<img src="assets/images/resource/case2.jpg" alt="">
-								<!-- port content icon -->
-								<div class="case-study-icon">
-									<a class="case-study-icon venobox vbox-item" data-gall="myportfolio"
-										href="assets/images/resource/case2.jpg"><i
-											class="bi bi-arrows-fullscreen"></i></a>
-								</div>
-							</div>
-							<!-- study content -->
-							<div class="case-study-content">
-								<div class="study-text">
-									<p> Personal </p>
-								</div>
-								<div class="study-title">
-									<h4><a href="case-study-details.html">Persona drug affences</a></h4>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-12">
-						<div class="case-study-single-box">
-							<!-- study thumb -->
-							<div class="case-study-thumb">
-								<img src="assets/images/resource/case3.jpg" alt="">
-								<!-- port content icon -->
-								<div class="case-study-icon">
-									<a class="case-study-icon venobox vbox-item" data-gall="myportfolio"
-										href="assets/images/resource/case3.jpg"><i
-											class="bi bi-arrows-fullscreen"></i></a>
-								</div>
-							</div>
-							<!-- study content -->
-							<div class="case-study-content">
-								<div class="study-text">
-									<p> Personal </p>
-								</div>
-								<div class="study-title">
-									<h4><a href="case-study-details.html">Persona drug affences</a></h4>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-12">
-						<div class="case-study-single-box">
-							<!-- study thumb -->
-							<div class="case-study-thumb">
-								<img src="assets/images/resource/case4.jpg" alt="">
-								<!-- port content icon -->
-								<div class="case-study-icon">
-									<a class="case-study-icon venobox vbox-item" data-gall="myportfolio"
-										href="assets/images/resource/case4.jpg"><i
-											class="bi bi-arrows-fullscreen"></i></a>
-								</div>
-							</div>
-							<!-- study content -->
-							<div class="case-study-content">
-								<div class="study-text">
-									<p> Personal </p>
-								</div>
-								<div class="study-title">
-									<h4><a href="case-study-details.html">Persona drug affences</a></h4>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-12">
-						<div class="case-study-single-box">
-							<!-- study thumb -->
-							<div class="case-study-thumb">
-								<img src="assets/images/resource/case5.jpg" alt="">
-								<!-- port content icon -->
-								<div class="case-study-icon">
-									<a class="case-study-icon venobox vbox-item" data-gall="myportfolio"
-										href="assets/images/resource/case5.jpg"><i
-											class="bi bi-arrows-fullscreen"></i></a>
-								</div>
-							</div>
-							<!-- study content -->
-							<div class="case-study-content">
-								<div class="study-text">
-									<p> Personal </p>
-								</div>
-								<div class="study-title">
-									<h4><a href="case-study-details.html">Persona drug affences</a></h4>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-12">
-						<div class="case-study-single-box">
-							<!-- study thumb -->
-							<div class="case-study-thumb">
-								<img src="assets/images/resource/case3.jpg" alt="">
-								<!-- port content icon -->
-								<div class="case-study-icon">
-									<a class="case-study-icon venobox vbox-item" data-gall="myportfolio"
-										href="assets/images/resource/case3.jpg"><i
-											class="bi bi-arrows-fullscreen"></i></a>
-								</div>
-							</div>
-							<!-- study content -->
-							<div class="case-study-content">
-								<div class="study-text">
-									<p> Personal </p>
-								</div>
-								<div class="study-title">
-									<h4><a href="case-study-details.html">Persona drug affences</a></h4>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-12">
-						<div class="case-study-single-box">
-							<!-- study thumb -->
-							<div class="case-study-thumb">
-								<img src="assets/images/resource/case4.jpg" alt="">
-								<!-- port content icon -->
-								<div class="case-study-icon">
-									<a class="case-study-icon venobox vbox-item" data-gall="myportfolio"
-										href="assets/images/resource/case4.jpg"><i
-											class="bi bi-arrows-fullscreen"></i></a>
-								</div>
-							</div>
-							<!-- study content -->
-							<div class="case-study-content">
-								<div class="study-text">
-									<p> Personal </p>
-								</div>
-								<div class="study-title">
-									<h4><a href="case-study-details.html">Persona drug affences</a></h4>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!--==================================================-->
-	<!-- End lawyer galary Section -->
-	<!--==================================================-->
-
-
-
-
-
-	<!--==================================================-->
-	<!-- Start lawyern Testimonial section -->
-	<!--==================================================-->
-	<div class="testimonial-section">
-		<div class="container">
-			<div class="row">
-				<div class="testimonial_list owl-carousel">
-					<div class="col-lg-12">
-						<div class="testimonial-single-box">
-							<!-- testi content -->
-							<div class="testimonial-content">
-								<!-- testi icon -->
-								<div class="testimonial-icon">
-									<i class="bi bi-quote"></i>
-								</div>
-								<!-- testi description -->
-								<div class="testimonial-desc">
-									<p>For those of you hosting this Christmas, read on; it’s time to polish up the
-										cutlery, bring out the china plates and brush up on our top tips on… </p>
-								</div>
-								<!-- testi title -->
-								<div class="testi-title">
-									<h4> John Abraham<span>-Customer</span> </h4>
-								</div>
-							</div>
-							<!-- testi star -->
-							<div class="testi-star-list">
-								<ul>
-									<li><i class="bi bi-star-fill"></i></li>
-									<li><i class="bi bi-star-fill"></i></li>
-									<li><i class="bi bi-star-fill"></i></li>
-									<li><i class="bi bi-star-fill"></i></li>
-									<li><i class="bi bi-star-fill"></i></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-12">
-						<div class="testimonial-single-box">
-							<!-- testi content -->
-							<div class="testimonial-content">
-								<!-- testi icon -->
-								<div class="testimonial-icon">
-									<i class="bi bi-quote"></i>
-								</div>
-								<!-- testi description -->
-								<div class="testimonial-desc">
-									<p>For those of you hosting this Christmas, read on; it’s time to polish up the
-										cutlery, bring out the china plates and brush up on our top tips on… </p>
-								</div>
-								<!-- testi title -->
-								<div class="testi-title">
-									<h4> John Abraham<span>-Customer</span> </h4>
-								</div>
-							</div>
-							<!-- testi star -->
-							<div class="testi-star-list">
-								<ul>
-									<li><i class="bi bi-star-fill"></i></li>
-									<li><i class="bi bi-star-fill"></i></li>
-									<li><i class="bi bi-star-fill"></i></li>
-									<li><i class="bi bi-star-fill"></i></li>
-									<li><i class="bi bi-star-fill"></i></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-12">
-						<div class="testimonial-single-box">
-							<!-- testi content -->
-							<div class="testimonial-content">
-								<!-- testi icon -->
-								<div class="testimonial-icon">
-									<i class="bi bi-quote"></i>
-								</div>
-								<!-- testi description -->
-								<div class="testimonial-desc">
-									<p>For those of you hosting this Christmas, read on; it’s time to polish up the
-										cutlery, bring out the china plates and brush up on our top tips on… </p>
-								</div>
-								<!-- testi title -->
-								<div class="testi-title">
-									<h4> John Abraham<span>-Customer</span> </h4>
-								</div>
-							</div>
-							<!-- testi star -->
-							<div class="testi-star-list">
-								<ul>
-									<li><i class="bi bi-star-fill"></i></li>
-									<li><i class="bi bi-star-fill"></i></li>
-									<li><i class="bi bi-star-fill"></i></li>
-									<li><i class="bi bi-star-fill"></i></li>
-									<li><i class="bi bi-star-fill"></i></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!--==================================================-->
-	<!-- End lawyern Testimonial Area -->
-	<!--==================================================-->
-
-
-
 
 
 
