--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>Lawyern Law & Lawyer HTML5 Template</title>
+	<title>עורכת דין מעין דקל</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Favicon -->
@@ -51,43 +51,6 @@
 	</div>
 
 	<!--==================================================-->
-	<!-- Start lawyer Header Top Menu Area Css -->
-	<!--==================================================-->
-	<!-- <div class="header_top_menu">
-		<div class="container">
-			<div class="row align-items-center">
-				<div class="col-lg-8 col-sm-8">
-					<div class="header_top_menu_address">
-						<ul>
-							<li><span><i class="far fa-clock"></i> 30-BT, New York, United States</span></li>
-							<li><span><i class="fas fa-phone"></i> +99-999-999-99</span></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-lg-4 col-sm-4">
-					<div class="header_top_menu_icon text-right">
-						<div class="header_top_menu_icon_inner">
-							<ul>
-								<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-								<li><a href="#"><i class="bi bi-twitter"></i></a></li>
-								<li class="menu-icon"><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-								<li class="menu-icon"><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div> -->
-	<!--==================================================-->
-	<!-- End lawyer Header Top Menu Area Css -->
-	<!--===================================================-->
-
-
-
-
-
-	<!--==================================================-->
 	<!-- Start lawyer Main Menu Area -->
 	<!--==================================================-->
 	<div id="sticky-header" class="lawyer_nav_manu align-items-center">
@@ -106,21 +69,16 @@
 				<div class="col-lg-8">
 					<nav class="lawyer_menu">
 						<ul class="nav_scroll">
-							<li><a href="#">עמוד הבית</a>
-								<ul class="sub-menu">
-									<li><a href="index.html">Home Page 01</a></li>
-									<li><a href="index-2.html">Home Page 02</a></li>
-									<li><a href="index-3.html">Home Page 03</a></li>
-								</ul>
+							<li><a href="index.html">עמוד הבית</a>
 							</li>
 							<li><a href="about.html">אודות</a></li>
 							<li><a href="#">תחומי התמחות</a>
 								<ul class="sub-menu">
-									<li><a href="about.html">About</a></li>
-									<li><a href="service.html">Service</a></li>
-									<li><a href="team.html">Team</a></li>
-									<li><a href="faq.html">Faq</a></li>
-									<li><a href="contact.html">Contact</a></li>
+									<li><a href="about.html">נדלן</a></li>
+									<li><a href="service.html">חוזים</a></li>
+									<li><a href="team.html">בלוג והרצאות</a></li>
+									<li><a href="faq.html">לשון הרע</a></li>
+									<li><a href="contact.html">נזיקין</a></li>
 								</ul>
 							</li>
 							<!-- <li><a href="#">Case Study</a>
@@ -131,22 +89,24 @@
 									<li><a href="case-study-details.html">Case Study Details</a></li>
 								</ul>
 							</li> -->
-							<li><a href="#">בלוג</a>
-								<ul class="sub-menu">
+							<!-- <li><a href="blog.html">בלוג</a> -->
+							<!-- <ul class="sub-menu">
 									<li><a href="blog.html">Blog List</a></li>
 									<li><a href="blog-2column.html">Blog 2Column</a></li>
 									<li><a href="blog-details.html">Blog Details</a></li>
+								</ul> -->
+							<!-- </li> -->
+							<li><a href="#">בלוג והרצאות</a>
+								<ul class="sub-menu">
+									<li><a href="blog.html">בלוג</a></li>
+									<li><a href="blog-2column.html">הרצאות</a></li>
+									<li><a href="blog-details.html">בלוג פרטים</a></li>
 								</ul>
 							</li>
 							<li><a href="contact.html">צור קשר</a></li>
 						</ul>
 					</nav>
 				</div>
-				<!-- <div class="col-lg-2 pl-0 pr-0 ">
-					<div class="header-button">
-						<a href="contact.html"> Gete Started <i class="bi bi-arrow-right"></i> </a>
-					</div>
-				</div> -->
 			</div>
 		</div>
 	</div>
@@ -227,9 +187,6 @@
 	<!--==================================================-->
 
 
-
-
-
 	<!--==================================================-->
 	<!-- Start lawyer about Section -->
 	<!--==================================================-->
@@ -238,12 +195,12 @@
 			<div class="row align-items-center">
 				<div class="col-lg-6 col-md-12">
 					<!-- about thumb -->
-					<div class="about-thumb3">
-						<img src="assets/images/resource/about4.jpg" alt="">
+					<div class="about-thumb3 ">
+						<img src="assets/images/LawyerMaayanWhite.jpg" alt="">
 					</div>
 				</div>
 				<div class="col-lg-6 col-md-12">
-					<div class="lawyer-section-title">
+					<div class="lawyer-section-title business-profile">
 						<h1 class="about-border2">אודות עורכת דין</h1>
 						<h1> מעין דקל</h1>
 						<p class="about-pt"> מעין דקל עורכת דין מנוסה בעלת ניסיון עשיר של 20 שנים, בעבודה עם משרדי עורכי
@@ -263,10 +220,6 @@
 							עבור הלקוחות .תוך טיפול צמוד והסבר מלא.
 						</p>
 					</div>
-					<!-- lawyer button -->
-					<div class="lawyer-button">
-						<a href="about.html"> Discover More <i class="bi bi-arrow-right"></i> </a>
-					</div>
 				</div>
 			</div>
 		</div>
@@ -276,14 +229,14 @@
 	<!--==================================================-->
 
 	<!--==================================================-->
-	<!-- Start lawyer about Section -->
+	<!-- Start lawyer bussiness profile Section -->
 	<!--==================================================-->
 	<div class="about-section style-three">
 		<div class="container">
 			<div class="row about-bg align-items-center row-reverse">
 				<div class="col-lg-6 col-md-12">
 					<!-- about thumb -->
-					<div class="about-thumb2">
+					<div class="about-thumb2 business-profile">
 						<img src="assets/images/resource/about3.jpg" alt="">
 						<!-- about counter -->
 						<div class="about-counter">
@@ -296,9 +249,20 @@
 				</div>
 				<div class="col-lg-6 col-md-12 pl-35">
 					<div class="lawyer-section-title">
-						<h1> עורכת דין מעין דקל </h1>
-						<p> מעין דקל עורכת דין מנוסה בעלת ניסיון עשיר של 20 שנים, בעבודה עם משרדי עורכי דין המובלים
-							בישראל, בקיאה בחוקים ובתקדימים המשפטיים. </p>
+						<h1>פרופיל עסקי </h1>
+						<p> מעין דקל נחשבת אורטוריטה בעולם הוצאה לפועל אחרי ניסיון בטיפול תיקים של חייבים וזוכים מעל ל20
+							שנים. שבהם צברה ניסיון
+							שבמהלכם ביצעה הסבות מורכבות של תיקי גבייה פעילים תוך מימושים מיוחדים. תוך טיפול בתיקים מול
+							הלקוח במקצועיות ושקיפות מלאה.
+							והכל בכפוף להוראות החוק , התקנות ועדכוני הפסיקה בהמשך לרגולציה המשפטית המשתנה מידי יום.
+						</p>
+						<p>
+							טיפול מלא בכל תחום ייצוג דיירים, ונדל"ן לאחר ניהול תיקים במשך עשור שלם, בהם חלשה על טיפול
+							בנכסי ירושה צווי ירושה
+							וצוואות, רכישה מכירה ושכירות של נכסי עסקים גדולים או נכסים פרטיים. תוך ניהול הליך בצמוד
+							ללקוחות.
+
+						</p>
 					</div>
 					<div class="row">
 						<div class="col-lg-6 col-md-6">
@@ -321,10 +285,6 @@
 							</div>
 						</div>
 					</div>
-					<!-- lawyer button -->
-					<div class="lawyer-button">
-						<a href="about.html"> קראו עוד <i class="bi bi-arrow-left"></i> </a>
-					</div>
 				</div>
 			</div>
 		</div>
@@ -332,126 +292,6 @@
 	<!--==================================================-->
 	<!-- End lawyer about Secton -->
 	<!--==================================================-->
-
-
-	<!--==================================================-->
-	<!-- Start lawyer Blog Section -->
-	<!--==================================================-->
-	<div class="team-section style-three">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-					<div class="lawyer-section-title text-center pb-65">
-						<h1> Creative Team Member </h1>
-						<p>Our consequat tincidunt turpis sit amet imperdiet praesent Class nonatoureanor practice aria
-							mauris laoreet, iaculis libero quis et tempus eri consequat lawyer.</p>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-4 col-md-6">
-					<div class="team-single-box">
-						<!-- volunteer thumb -->
-						<div class="team-thumb">
-							<img src="assets/images/resource/team1.jpg" alt="">
-							<!-- team social icon -->
-							<div class="team-share-social">
-								<div class="team-socail-icon">
-									<a href="#"><span><i class="fab fa-facebook-f"></i></span></a>
-									<a href="#"><i class="fab fa-twitter"></i></a>
-									<a href="#"><i class="fab fa-linkedin-in"></i></a>
-									<a href="#"><i class="fab fa-pinterest-p"></i></a>
-								</div>
-								<div class="team-icon text-right">
-									<span>+</span>
-								</div>
-							</div>
-						</div>
-						<!-- team content -->
-						<div class="team-content">
-							<!-- volunteer title -->
-							<div class="team-title">
-								<h2>Anjelles Watson</h2>
-							</div>
-							<!-- team text -->
-							<div class="team-text">
-								<span>Web Developer</span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6">
-					<div class="team-single-box">
-						<!-- volunteer thumb -->
-						<div class="team-thumb">
-							<img src="assets/images/resource/team2.jpg" alt="">
-							<!-- team social icon -->
-							<div class="team-share-social">
-								<div class="team-socail-icon">
-									<a href="#"><span><i class="fab fa-facebook-f"></i></span></a>
-									<a href="#"><i class="fab fa-twitter"></i></a>
-									<a href="#"><i class="fab fa-linkedin-in"></i></a>
-									<a href="#"><i class="fab fa-pinterest-p"></i></a>
-								</div>
-								<div class="team-icon text-right">
-									<span>+</span>
-								</div>
-							</div>
-						</div>
-						<!-- team content -->
-						<div class="team-content">
-							<!-- volunteer title -->
-							<div class="team-title">
-								<h2>Louise Campbell</h2>
-							</div>
-							<!-- team text -->
-							<div class="team-text">
-								<span>Graphic Designer</span>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-6">
-					<div class="team-single-box">
-						<!-- volunteer thumb -->
-						<div class="team-thumb">
-							<img src="assets/images/resource/team3.jpg" alt="">
-							<!-- team social icon -->
-							<div class="team-share-social">
-								<div class="team-socail-icon">
-									<a href="#"><span><i class="fab fa-facebook-f"></i></span></a>
-									<a href="#"><i class="fab fa-twitter"></i></a>
-									<a href="#"><i class="fab fa-linkedin-in"></i></a>
-									<a href="#"><i class="fab fa-pinterest-p"></i></a>
-								</div>
-								<div class="team-icon text-right">
-									<span>+</span>
-								</div>
-							</div>
-						</div>
-						<!-- team content -->
-						<div class="team-content">
-							<!-- volunteer title -->
-							<div class="team-title">
-								<h2>David E. Meza</h2>
-							</div>
-							<!-- team text -->
-							<div class="team-text">
-								<span>Project Manager</span>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!--==================================================-->
-	<!-- End lawyer galary Section -->
-	<!--==================================================-->
-
-
-
-
 
 	<!--==================================================-->
 	<!-- Start lawyer Footer Section -->
