--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title>Lawyern Law & Lawyer HTML5 Template</title>
+	<title>עורכת דין מעין דקל</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Favicon -->
@@ -25,6 +25,8 @@
 	<link rel="stylesheet" href="assets/css/theme-default.css" type="text/css" media="all" />
 	<!-- meanmenu CSS -->
 	<link rel="stylesheet" href="assets/css/meanmenu.min.css" type="text/css" media="all" />
+	<!-- font css (added) -->
+	<link rel="stylesheet" href="assets/css/fonts.css" type="text/css" media="all" />
 	<!-- Main Style CSS -->
 	<link rel="stylesheet" href="style.css" type="text/css" media="all" />
 	<!-- transitions CSS -->
@@ -55,44 +57,6 @@
 		<div class="loder-section right-section"></div>
 	</div>
 
-
-	<!--==================================================-->
-	<!-- Start lawyer Header Top Menu Area Css -->
-	<!--==================================================-->
-	<!-- <div class="header_top_menu">
-		<div class="container">
-			<div class="row align-items-center">
-				<div class="col-lg-8 col-sm-8">
-					<div class="header_top_menu_address">
-						<ul>
-							<li><span><i class="far fa-clock"></i> 30-BT, New York, United States</span></li>
-							<li><span><i class="fas fa-phone"></i> +99-999-999-99</span></li>
-						</ul>
-					</div>
-				</div>
-				<div class="col-lg-4 col-sm-4">
-					<div class="header_top_menu_icon text-right">
-						<div class="header_top_menu_icon_inner">
-							<ul>
-								<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-								<li><a href="#"><i class="bi bi-twitter"></i></a></li>
-								<li class="menu-icon"><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-								<li class="menu-icon"><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div> -->
-	<!--==================================================-->
-	<!-- End lawyer Header Top Menu Area Css -->
-	<!--===================================================-->
-
-
-
-
-
 	<!--==================================================-->
 	<!-- Start lawyer Main Menu Area -->
 	<!--==================================================-->
@@ -112,47 +76,29 @@
 				<div class="col-lg-8">
 					<nav class="lawyer_menu">
 						<ul class="nav_scroll">
-							<li><a href="#">עמוד הבית</a>
-								<ul class="sub-menu">
-									<li><a href="index.html">Home Page 01</a></li>
-									<li><a href="index-2.html">Home Page 02</a></li>
-									<li><a href="index-3.html">Home Page 03</a></li>
-								</ul>
+							<li><a href="index.html">עמוד הבית</a>
 							</li>
 							<li><a href="about.html">אודות</a></li>
 							<li><a href="#">תחומי התמחות</a>
 								<ul class="sub-menu">
-									<li><a href="about.html">About</a></li>
-									<li><a href="service.html">Service</a></li>
-									<li><a href="team.html">Team</a></li>
-									<li><a href="faq.html">Faq</a></li>
-									<li><a href="contact.html">Contact</a></li>
+									<li><a href="about.html">נדלן</a></li>
+									<li><a href="service.html">חוזים</a></li>
+									<li><a href="team.html">בלוג והרצאות</a></li>
+									<li><a href="faq.html">לשון הרע</a></li>
+									<li><a href="contact.html">נזיקין</a></li>
 								</ul>
 							</li>
-							<!-- <li><a href="#">Case Study</a>
-								<ul class="sub-menu">
-									<li><a href="case-study-1.html">Case Study One</a></li>
-									<li><a href="case-study-2.html">Case Study Two</a></li>
-									<li><a href="case-study-3.html">Case Study Three</a></li>
-									<li><a href="case-study-details.html">Case Study Details</a></li>
-								</ul>
-							</li> -->
-							<li><a href="#">בלוג</a>
-								<ul class="sub-menu">
+							<li><a href="blog.html">בלוג</a>
+								<!-- <ul class="sub-menu">
 									<li><a href="blog.html">Blog List</a></li>
 									<li><a href="blog-2column.html">Blog 2Column</a></li>
 									<li><a href="blog-details.html">Blog Details</a></li>
-								</ul>
+								</ul> -->
 							</li>
 							<li><a href="contact.html">צור קשר</a></li>
 						</ul>
 					</nav>
 				</div>
-				<!-- <div class="col-lg-2 pl-0 pr-0 ">
-					<div class="header-button">
-						<a href="contact.html"> Gete Started <i class="bi bi-arrow-right"></i> </a>
-					</div>
-				</div> -->
 			</div>
 		</div>
 	</div>
@@ -162,15 +108,10 @@
 		<div class="mobile-menu">
 			<nav class="lawyer_menu">
 				<ul class="nav_scroll">
-					<li><a href="#">Home</a>
-						<ul class="sub-menu">
-							<li><a href="index.html">Home Page 01</a></li>
-							<li><a href="index-2.html">Home Page 02</a></li>
-							<li><a href="index-3.html">Home Page 03</a></li>
-						</ul>
+					<li><a href="index.html"">עמוד הבית</a>					
 					</li>
-					<li><a href="about.html">About </a></li>
-					<li><a href="#">Pages</a>
+					<li><a href=" about.html">About </a></li>
+					<li><a href="#">תחומי התמחות</a>
 						<ul class="sub-menu">
 							<li><a href="about.html">About</a></li>
 							<li><a href="service.html">Service</a></li>
@@ -202,11 +143,6 @@
 	<!--==================================================-->
 	<!-- End lawyer Main Menu Area -->
 	<!--==================================================-->
-
-
-
-
-
 
 	<!--==================================================-->
 	<!-- Start lawyer hero section -->
@@ -548,8 +484,6 @@
 				<div class="col-lg-12 pb-60">
 					<div class="lawyer-section-title text-center">
 						<h1> השאירו פרטים ונחזור אליכם בהקדם</h1>
-						<!-- <p>Our consequat tincidunt turpis sit amet imperdiet praesent Class nonatoureanor practice aria
-							mauris laoreet, iaculis libero quis et tempus eri consequat lawyer.</p> -->
 					</div>
 				</div>
 			</div>
@@ -597,7 +531,7 @@
 				</div>
 				<div class="col-lg-6 col-md-12">
 					<div class="contact-thumb">
-						<img src="assets/images/resource/contact.jpg" alt="">
+						<img src="assets/images/MaayanWhiteContactUs.jpg" alt="">
 						<!-- contact icon -->
 						<div class="contact-information">
 							<div class="contact-icon">
