removing unnessecery pages + place the footer in pages

--- a/index.html
+++ b/index.html
@@ -731,8 +731,6 @@
 
 
 
-
-
 	<!--==================================================-->
 	<!-- Start lawyer Footer Section -->
 	<!--==================================================-->
@@ -744,22 +742,24 @@
 						<!-- lawyer logo -->
 						<div class="lawyer-logo">
 							<a class="logo_img" href="index.html" title="techno">
-								<img src="assets/images/logo.png" alt="" />
+								<img src="assets/images/LawyerMaayanLogo.svg" alt="Logo" />
+								<h3 style="color:#eecd95;"> עו"ד מעין דקל </h3>
+								<h4 style="color:#eecd95;">MAYAN DEKEL LAW OFFICE</h4>
 							</a>
 						</div>
 						<!-- company desc info -->
 						<div class="company-desc-info">
-							<p> <i class="bi bi-telephone"></i> Phone: 800.123.4567 </p>
-							<p> <i class="bi bi-envelope-fill"></i> Email: www.@example.com </p>
-							<p> <i class="bi bi-geo-alt-fill"></i> A26BT5 Building, SilverC Street, </p>
+							<p> <i class="bi bi-telephone"></i> Phone: 050-7526885 </p>
+							<p> <i class="bi bi-envelope-fill"></i> Email: dekellaw2024@gmail.com </p>
+							<p> <i class="bi bi-geo-alt-fill"></i> מה הכתובת של המשרד? </p>
 						</div>
 						<!-- company social info -->
 						<div class="company-social-info">
 							<ul>
 								<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-								<li><a href="#"><i class="fab fa-twitter"></i></a></li>
+								<!-- <li><a href="#"><i class="fab fa-twitter"></i></a></li> -->
 								<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-								<li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
+								<!-- <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li> -->
 							</ul>
 						</div>
 					</div>
@@ -767,13 +767,13 @@
 				<div class="col-lg-3 col-md-6 pl-30">
 					<div class="widget-nav-menu">
 						<!-- widget title -->
-						<h4 class="widget-title"> Services </h4>
+						<h4 class="widget-title"> תחומי התמחות </h4>
 						<div class="menu-quick-link-content">
 							<ul class="footer-widget-list">
-								<li><a href="#"> Labor and Employment </a></li>
-								<li><a href="#"> Intellectual Property </a></li>
-								<li><a href="#"> Legal IT services </a></li>
-								<li><a class="border1" href="#"> Banking and Finance </a></li>
+								<li><a href="real-estate.html">נדלן</a></li>
+								<li><a href="contracts.html">חוזים</a></li>
+								<li><a href="defamation-law.html">לשון הרע</a></li>
+								<li><a href="tort_law.html">נזיקין</a></li>
 							</ul>
 						</div>
 					</div>
@@ -781,13 +781,13 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="widget-nav-menu">
 						<!-- widget title -->
-						<h4 class="widget-title"> Useful Links </h4>
+						<h4 class="widget-title">בלוג והרצאות </h4>
 						<div class="menu-quick-link-content">
 							<ul class="footer-widget-list">
-								<li><a href="#"> Terms and Conditions </a></li>
-								<li><a href="#"> Privacy Policy </a></li>
+								<li><a href="#"> בקרוב... </a></li>
+								<!-- <li><a href="#"> Privacy Policy </a></li>
 								<li><a href="#"> Complaints Policy </a></li>
-								<li><a class="border1" href="#"> FAQ </a></li>
+								<li><a class="border1" href="#"> FAQ </a></li> -->
 							</ul>
 						</div>
 					</div>
@@ -795,7 +795,7 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="widget-nav-menu">
 						<!-- widget title -->
-						<h4 class="widget-title"> Free Consultation </h4>
+						<h4 class="widget-title"> צור קשר </h4>
 						<div class="menu-quick-link-contact">
 							<!-- contact icon -->
 							<div class="footer-contact-icon">
@@ -803,13 +803,16 @@
 							</div>
 							<!-- contact title -->
 							<div class="footer-contact-title">
-								<h6>1-800-643-430 244</h6>
+								<h6>050-7526885</h6>
 							</div>
 						</div>
 						<!-- footer desc -->
 						<div class="footer-contact-desc">
-							<p>Goldenblatt Firm SRA ref 669401 dalls may be recorded for quality and moldenblatt Firm
-								SRA ref desh training purposes.</p>
+							<p>משרד עורכי דין מעין דקל ושות' מתמחה במתן ייעוץ משפטי מקיף ושלם בתחומים רבים. לרבות, הוצאה
+								לפועל בתיקי חייבים וזוכים,
+								מזונות, משפט אזרחי, חוזים והסכמים, בתחומי הנדל"ן רכישה ומכירת נכסים, השכרת נכסים, ייצוג
+								דיירים בפרוייקט תמ"א 38 ,פינוי
+								בינוי, תביעות לשון הרע, ותביעות נזקי רכוש.</p>
 						</div>
 					</div>
 				</div>
@@ -817,14 +820,14 @@
 			<div class="row footer-bottom-bg">
 				<div class="col-lg-6 col-md-6 pl-0">
 					<div class="footer-bottom-content-copy">
-						<p> Copyright 2023 By DRTheme. All Rights Reserved. </p>
+						<p>© כל הזכויות שמורות למעין דקל ושות׳ - משרד עורכי דין </p>
 					</div>
 				</div>
 				<div class="col-lg-6 col-md-6 pr-0">
 					<div class="footer-bottom-menu text-right">
 						<ul>
-							<li><a href="#">Privacy Policy</a></li>
-							<li><a href="#">Legal Agreement</a></li>
+							<li><a href="privacy-policy.html">מדיניות פרטיות</a></li>
+							<li><a href="legal-agreement.html">הסכם משפטי</a></li>
 						</ul>
 					</div>
 				</div>
@@ -834,7 +837,6 @@
 	<!--==================================================-->
 	<!-- End lawyer Footer Section -->
 	<!--==================================================-->
-
 
 
 
