--- a/legal-agreement.html
+++ b/legal-agreement.html
@@ -304,7 +304,9 @@
                         <div class="company-social-info">
                             <ul>
                                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                                <!-- <li><a href="#"><i class="fab fa-twitter"></i></a></li> -->
                                 <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                                <!-- <li><a href="#"><i class="fab fa-pinterest-p"></i></a></li> -->
                             </ul>
                         </div>
                     </div>
@@ -315,10 +317,10 @@
                         <h4 class="widget-title"> תחומי התמחות </h4>
                         <div class="menu-quick-link-content">
                             <ul class="footer-widget-list">
-                                <li><a href="about.html">נדלן</a></li>
-                                <li><a href="service.html">חוזים</a></li>
-                                <li><a href="faq.html">לשון הרע</a></li>
-                                <li><a href="contact.html">נזיקין</a></li>
+                                <li><a href="real-estate.html">נדלן</a></li>
+                                <li><a href="contracts.html">חוזים</a></li>
+                                <li><a href="defamation-law.html">לשון הרע</a></li>
+                                <li><a href="tort_law.html">נזיקין</a></li>
                             </ul>
                         </div>
                     </div>
@@ -330,6 +332,9 @@
                         <div class="menu-quick-link-content">
                             <ul class="footer-widget-list">
                                 <li><a href="#"> בקרוב... </a></li>
+                                <!-- <li><a href="#"> Privacy Policy </a></li>
+								<li><a href="#"> Complaints Policy </a></li>
+								<li><a class="border1" href="#"> FAQ </a></li> -->
                             </ul>
                         </div>
                     </div>
@@ -362,7 +367,7 @@
             <div class="row footer-bottom-bg">
                 <div class="col-lg-6 col-md-6 pl-0">
                     <div class="footer-bottom-content-copy">
-                        <p>© כל הזכויות שמורות לחצבני ושות׳ - משרד עורכי דין</p>
+                        <p>© כל הזכויות שמורות למעין דקל ושות׳ - משרד עורכי דין </p>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6 pr-0">
