--- a/tort_law.html
+++ b/tort_law.html
@@ -292,7 +292,6 @@
     <!--==================================================-->
     <!-- End lawyer about Secton -->
     <!--==================================================-->
-
     <!--==================================================-->
     <!-- Start lawyer Footer Section -->
     <!--==================================================-->
@@ -332,10 +331,10 @@
                         <h4 class="widget-title"> תחומי התמחות </h4>
                         <div class="menu-quick-link-content">
                             <ul class="footer-widget-list">
-                                <li><a href="about.html">נדלן</a></li>
-                                <li><a href="service.html">חוזים</a></li>
-                                <li><a href="faq.html">לשון הרע</a></li>
-                                <li><a href="contact.html">נזיקין</a></li>
+                                <li><a href="real-estate.html">נדלן</a></li>
+                                <li><a href="contracts.html">חוזים</a></li>
+                                <li><a href="defamation-law.html">לשון הרע</a></li>
+                                <li><a href="tort_law.html">נזיקין</a></li>
                             </ul>
                         </div>
                     </div>
@@ -399,7 +398,6 @@
     <!--==================================================-->
     <!-- End lawyer Footer Section -->
     <!--==================================================-->
-
 
 
 
